--- a/.github/workflows/Postman.yml
+++ b/.github/workflows/Postman.yml
@@ -1,7 +1,3 @@
-# Jenkins runs pipelines on the host system that it is setup on. To run it on mac
-# install the server on a mac machine by following https://www.jenkins.io/doc/book/installing/macos/
-# once it has been setup add the below step to your pipeline file to run automated tests using Postman CLI.
-
 pipeline {
   agent any
 
@@ -10,14 +6,14 @@ pipeline {
   stages {
     stage('Install Postman CLI') {
       steps {
-        sh 'curl -o- "https://dl-cli.pstmn.io/install/osx_64.sh" | sh'
+        sh 'curl -o- "https://dl-cli.pstmn.io/install/linux64.sh" | sh'
       }
     }
 
     stage('Postman CLI Login') {
       steps {
         sh 'postman login --with-api-key $POSTMAN_API_KEY'
-      }
+        }
     }
 
     stage('Running collection') {
