--- a/.github/workflows/Postman.yml
+++ b/.github/workflows/Postman.yml
@@ -6,14 +6,14 @@ pipeline {
   stages {
     stage('Install Postman CLI') {
       steps {
-        sh 'curl -o- "https://dl-cli.pstmn.io/install/linux64.sh" | sh'
+        sh 'curl -o- "https://dl-cli.pstmn.io/install/osx_64.sh" | sh'
       }
     }
 
     stage('Postman CLI Login') {
       steps {
         sh 'postman login --with-api-key $POSTMAN_API_KEY'
-        }
+      }
     }
 
     stage('Running collection') {
